# evdaemon

./: .gitignore  README.md  pyproject.toml  setup.py
evdaemon/: __init__.py  daemon.py  hooks.py  module.py  state.py
evdmodule_i3/: __init__.py  ipc.py  module.py  notes.txt
evdmodule_wm/: __init__.py  module.py  monitor.py  rect.py  window.py  workspace.py
