[build-system]
requires            = ["setuptools>=61.0"]
build-backend       = "setuptools.build_meta"

[project]
name                = "evdaemon"
dynamic             = ["readme", "version", "dependencies"]
authors             = [{ name = "Ferdinand Bachmann", email = "ferdinand.bachmann@yrlf.at" }]
description         = "extensible event system"
requires-python     = ">=3.5"
classifiers         = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage"          = "https://github.com/Ferdi265/evdaemon"
"Bug Tracker"       = "https://github.com/Ferdi265/evdaemon/issues"

[tool.setuptools]
packages            = ["evdaemon", "evdmodule_i3", "evdmodule_wm"]

[tool.setuptools.dynamic]
version             = { attr = "evdaemon.__version__" }
readme              = { file = ["README.md"], content-type = "text/markdown" }
dependencies        = { file = ["requirements.txt"] }
